# obsidian-smart-workflow

./: .gitignore  README.md  README_CN.md  eslint.config.mjs  manifest.json  package.json  styles.css  versions.json
.github/workflows/: build-rust.yml  release.yml
pty-server/.cargo/: config.toml
pty-server/src/: pty_session.rs  shell.rs
rust-servers/: Cargo.toml
rust-servers/src/: router.rs  server.rs
rust-servers/src/pty/: mod.rs
rust-servers/src/utils/: mod.rs
rust-servers/src/voice/: config.rs  mod.rs
rust-servers/src/voice/audio/: mod.rs  recorder.rs  streaming.rs  utils.rs
scripts/: README.md
src/: main.ts
src/i18n/: i18nService.ts  index.ts  types.ts
src/i18n/locales/: en.ts  zh-CN.ts
src/services/: fileNameService.ts
src/services/ai/: requestBuilder.ts  thinkingProcessor.ts  types.ts
src/services/archiving/: archiveService.ts  index.ts
src/services/automation/: autoArchiveService.ts  index.ts
src/services/categorizing/: categoryService.ts  index.ts
src/services/chat/: chatService.ts
src/services/config/: configManager.ts
src/services/naming/: aiService.ts  fileNameService.ts
src/services/server/: binaryDownloader.ts  serverManager.ts  types.ts  voiceClient.ts
src/services/tagging/: index.ts  tagService.ts
src/services/terminal/: binaryManager.ts  platformUtils.ts  terminalInstance.ts  terminalService.ts
src/services/voice/: types.ts  voiceInputService.ts
src/services/writing/: writingService.ts
src/settings/: settings.ts  settingsTab.ts
src/ui/: noticeHelper.ts
tests/: secret-storage-security-validation.ts
(+35 files in other folders)
